--- a/build_fir_coefficients/Makefile
+++ b/build_fir_coefficients/Makefile
@@ -1,3 +1,3 @@
 all: ../../sc_dsp_filters/build_fir_coefficients/src/makeFIR.c
-	cc ../../sc_dsp_filters/build_fir_coefficients/src/makeFIR.c
+	cc ../../sc_dsp_filters/build_fir_coefficients/src/makeFIR.c -lm
 	./a.out $(FILTER)
