--- a/build_biquad_coefficients/Makefile
+++ b/build_biquad_coefficients/Makefile
@@ -1,3 +1,3 @@
 all: ../../sc_dsp_filters/build_biquad_coefficients/src/makeCoeffs.c
-	cc ../../sc_dsp_filters/build_biquad_coefficients/src/makeCoeffs.c -lm
-	./a.out $(FILTER)
+	cc -DFILTER="\"$(FILTER)\"" -DINCLUDEFILE="\"$(INCLUDEFILE)\"" -DXCFILE="\"$(XCFILE)\"" -DCSVFILE="\"$(CSVFILE)\"" ../../sc_dsp_filters/build_biquad_coefficients/src/makeCoeffs.c -lm
+	./a.out
