Java version of coefficient builder

--- a/build_biquad_coefficients/Makefile
+++ b/build_biquad_coefficients/Makefile
@@ -1,3 +1,6 @@
-all: ../../sc_dsp_filters/build_biquad_coefficients/src/makeCoeffs.c
-	cc -DFILTER="\"$(FILTER)\"" -DINCLUDEFILE="\"$(INCLUDEFILE)\"" -DXCFILE="\"$(XCFILE)\"" -DCSVFILE="\"$(CSVFILE)\"" ../../sc_dsp_filters/build_biquad_coefficients/src/makeCoeffs.c -lm
-	./a.out
+all: MakeCoeffs.class
+	java MakeCoeffs $(FILTER) -h $(INCLUDEFILE) -xc $(XCFILE) -csv $(CSVFILE)
+
+MakeCoeffs.class: ../../sc_dsp_filters/build_biquad_coefficients/src/MakeCoeffs.java
+	javac  ../../sc_dsp_filters/build_biquad_coefficients/src/MakeCoeffs.java
+	cp ../../sc_dsp_filters/build_biquad_coefficients/src/MakeCoeffs*.class .
