--- a/build_fir_coefficients/Makefile
+++ b/build_fir_coefficients/Makefile
@@ -1,3 +1,6 @@
-all: ../../sc_dsp_filters/build_fir_coefficients/src/makeFIR.c
-	cc ../../sc_dsp_filters/build_fir_coefficients/src/makeFIR.c -lm
-	./a.out $(FILTER)
+all: MakeFIR.class
+	java MakeFIR $(FILTER)
+
+MakeFIR.class: ../../sc_dsp_filters/build_fir_coefficients/src/makeFIR.java
+	javac ../../sc_dsp_filters/build_fir_coefficients/src/MakeFIR.java
+	mv ../../sc_dsp_filters/build_fir_coefficients/src/MakeFIR.class .
