Added files to be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,14 @@
 *.xi
 *.i
 *.a
+app_example_biquad/MakeCoeffs$F.class
+app_example_biquad/MakeCoeffs.class
+app_example_fir/MakeFIR.class
+doc/Doxyfile-e
+doc/_build/
+doc/dsp_filtering.aux
+doc/dsp_filtering.idx
+doc/dsp_filtering.log
+doc/dsp_filtering.out
+doc/dsp_filtering.pdf
+doc/dsp_filtering.tex
