Added JAR file to buildfircoefficients

--- a/build_fir_coefficients/Makefile
+++ b/build_fir_coefficients/Makefile
@@ -1,6 +1,11 @@
-all: MakeFIR.class
-	java MakeFIR $(FILTER)
+DIR=../../sc_dsp_filters/build_fir_coefficients
 
-MakeFIR.class: ../../sc_dsp_filters/build_fir_coefficients/src/makeFIR.java
-	javac ../../sc_dsp_filters/build_fir_coefficients/src/MakeFIR.java
-	mv ../../sc_dsp_filters/build_fir_coefficients/src/MakeFIR.class .
+all: $(DIR)/lib/makefir.jar
+	java -jar $(DIR)/lib/makefir.jar $(FILTER)
+
+$(DIR)/lib/makefir.jar: $(DIR)/src/makeFIR.java
+	cd $(DIR); \
+    javac src/MakeFIR.java ; \
+	mv src/MakeFIR.class . ;\
+	jar cfm lib/makefir.jar src/MANIFEST MakeFIR.class ;\
+	rm MakeFIR.class
