Ensuring top-level make works with 12.2 tools

--- a/app_example_multicore_fir/Makefile
+++ b/app_example_multicore_fir/Makefile
@@ -1,6 +1,6 @@
 TARGET = XC-1A
 
-APP_NAME = 
+APP_NAME = app_example_multicore_fir
 
 XCC_FLAGS =-O3 -g
 
@@ -10,8 +10,5 @@ USED_MODULES = module_fir
 # The following part of the Makefile includes the common build infrastructure
 # for compiling XMOS applications. You should not need to edit below here.
 
-
-# Use the main Makefile from module_xcommon
--include ../module_xcommon/build/Makefile.common
--include ../../xcommon/module_xcommon/build/Makefile.common
-
+XMOS_MAKE_PATH ?= ../..
+include $(XMOS_MAKE_PATH)/xcommon/module_xcommon/build/Makefile.common
