--- a/app_example_fir12/Makefile
+++ b/app_example_fir12/Makefile
@@ -7,11 +7,8 @@ USED_MODULES = module_fir
 # The following part of the Makefile includes the common build infrastructure
 # for compiling XMOS applications. You should not need to edit below here.
 
-
-# Use the main Makefile from module_xcommon
--include ../module_xcommon/build/Makefile.common
--include ../../xcommon/module_xcommon/build/Makefile.common
-
+XMOS_MAKE_PATH ?= ../..
+include $(XMOS_MAKE_PATH)/xcommon/module_xcommon/build/Makefile.common
 
 clean: clean_common
-	rm MakeFIR.class
+	rm -f MakeFIR.class
