Attempt at repairing new makefile

--- a/app_slicekit_fbnc_demo/Makefile
+++ b/app_slicekit_fbnc_demo/Makefile
@@ -1,27 +1,15 @@
-# The TARGET variable determines what target system the application is
-# compiled for. It either refers to an XN file in the source directories
-# or a valid argument for the --target option when compiling
 TARGET = xp_skc_su1.xn
-
-# The APP_NAME variable determines the name of the final .xe file. It should
-# not include the .xe postfix. If left blank the name will default to
-# the project name
 APP_NAME = app_slicekit_fbnc_demo
-
-# The USED_MODULES variable lists other module used by the application.
 USED_MODULES = module_i2c_single_port module_i2s_loopback module_i2s_master
 
-# The flags passed to xcc when building the application
-# You can also set the following to override flags for a particular language:
-# XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
-# If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
-# xcc for the final link (mapping) stage.
-XCC_FLAGS_Debug = -O3 -g -Wall
-XCC_FLAGS_Release = -O3 -Wall
+XCC_FLAGS = -O3 -g -Wall $(CLFLAGS)
 
 # The VERBOSE variable, if set to 1, enables verbose output from the make system.
 VERBOSE = 0
 
-XMOS_MAKE_PATH ?= ../..
--include $(XMOS_MAKE_PATH)/xcommon/module_xcommon/build/Makefile.common
+#=============================================================================
+# The following part of the Makefile includes the common build infrastructure
+# for compiling XMOS applications. You should not need to edit below here.
 
+XMOS_MAKE_PATH ?= ../..
+include $(XMOS_MAKE_PATH)/xcommon/module_xcommon/build/Makefile.common
